--- a/ClassLibrary/ClassLibrary.csproj
+++ b/ClassLibrary/ClassLibrary.csproj
@@ -49,7 +49,11 @@
     <Compile Include="Polymorphism\LoadManager.cs" />
     <Compile Include="Polymorphism\WordFile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Proxy\DBManager.cs" />
+    <Compile Include="Proxy\DBManagerProxy.cs" />
+    <Compile Include="Proxy\IDBAction.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
